[gd_scene load_steps=37 format=3 uid="uid://cefthhhmucu7t"]

[ext_resource type="Script" path="res://Scripts/level_setup.gd" id="1_psd0u"]
[ext_resource type="Texture2D" uid="uid://bdmtwlgfg5p4m" path="res://Images/Background Images/metal_background.png" id="2_5iy7j"]
[ext_resource type="Script" path="res://Scripts/bouncer.gd" id="3_rflqc"]
[ext_resource type="Texture2D" uid="uid://dhpwlgy2vji4r" path="res://prefabs/Bouncers2.atlastex" id="4_31xjv"]
[ext_resource type="Texture2D" uid="uid://bhsedwblj1hpc" path="res://prefabs/Bouncers3.atlastex" id="5_dcuko"]
[ext_resource type="Texture2D" uid="uid://texxu1sj6y5q" path="res://prefabs/NegativeMagnetAnimations.atlastex" id="6_8gyps"]
[ext_resource type="Texture2D" uid="uid://dqhdt4atd2j7h" path="res://prefabs/NegativeMagnetAnimations2.atlastex" id="7_ihw6y"]
[ext_resource type="Texture2D" uid="uid://doj2bi8hhyv7" path="res://prefabs/MagnetPowerForm.atlastex" id="8_trje2"]
[ext_resource type="Texture2D" uid="uid://ci2b4gn8y3bg6" path="res://prefabs/MagnetActiveForm.atlastex" id="9_oxku5"]
[ext_resource type="Texture2D" uid="uid://b0pcute1q8awa" path="res://prefabs/MagnetActiveForm2.atlastex" id="10_cuf27"]
[ext_resource type="Texture2D" uid="uid://403vbatxe4e6" path="res://sprites/Dotted_Line.png" id="11_546d0"]
[ext_resource type="Texture2D" uid="uid://bekqvjnliex70" path="res://prefabs/HeartsSystem_3lifes.atlastex" id="12_ketos"]
[ext_resource type="PackedScene" uid="uid://bdd7y1uep7eae" path="res://prefabs/ball.tscn" id="13_lxkvh"]
[ext_resource type="Script" path="res://Scripts/try_again_button.gd" id="14_3fm6v"]
[ext_resource type="Script" path="res://Scripts/level_menu_button.gd" id="15_ypisd"]
[ext_resource type="Script" path="res://Scripts/next_level_button.gd" id="16_fxdma"]
[ext_resource type="Script" path="res://Scripts/bricks_in_level.gd" id="17_um4ut"]
[ext_resource type="Script" path="res://Scripts/brick.gd" id="18_3nv7f"]
[ext_resource type="Texture2D" uid="uid://dhnx4flhomj4m" path="res://prefabs/Brick(4).atlastex" id="19_f5trq"]
[ext_resource type="Texture2D" uid="uid://dy3mwx5qxa3om" path="res://prefabs/Brick(3).atlastex" id="20_6xmg3"]
[ext_resource type="Texture2D" uid="uid://jrodibporqka" path="res://prefabs/Brick(2).atlastex" id="21_l8imy"]
[ext_resource type="Texture2D" uid="uid://dli6pibkytdmv" path="res://prefabs/Brick(1).atlastex" id="22_yngaq"]
[ext_resource type="Script" path="res://Scripts/glass_storage.gd" id="23_pkukq"]
[ext_resource type="Texture2D" uid="uid://bpbgompsign7f" path="res://sprites/PowerUpGlassStorage.png" id="24_rtr3y"]
[ext_resource type="PackedScene" uid="uid://cobkwwyclxb3u" path="res://prefabs/laser_holder.tscn" id="25_qtbdt"]
[ext_resource type="PackedScene" uid="uid://cb1jy3pa1b4tk" path="res://prefabs/LaserBeam2D.tscn" id="26_al64v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hr6h0"]
size = Vector2(145, 893)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gl076"]
size = Vector2(1433, 123)

[sub_resource type="SpriteFrames" id="SpriteFrames_1q3n0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_31xjv")
}, {
"duration": 1.0,
"texture": ExtResource("5_dcuko")
}, {
"duration": 1.0,
"texture": ExtResource("4_31xjv")
}],
"loop": false,
"name": &"Ball_hits_bouncer",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_8gyps")
}, {
"duration": 1.0,
"texture": ExtResource("7_ihw6y")
}],
"loop": true,
"name": &"Negative_magnet",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_trje2")
}],
"loop": false,
"name": &"Static_magnet",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_oxku5")
}, {
"duration": 1.0,
"texture": ExtResource("10_cuf27")
}],
"loop": true,
"name": &"magnet_bouncer",
"speed": 2.0
}]

[sub_resource type="Gradient" id="Gradient_2seve"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.44, 0.44, 0.44, 0.792157)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_h3jj2"]
gradient = SubResource("Gradient_2seve")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6k6ug"]
bg_color = Color(0.171, 0.57, 0.171, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r1yhf"]
bg_color = Color(0.66, 0.61248, 0.1848, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vyjbl"]
bg_color = Color(0.352941, 0.6, 0.6, 1)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_q1s4i"]
friction = 0.0
bounce = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8xt01"]
size = Vector2(117.787, 50.8535)

[node name="Level_5_scene" type="Node2D"]
script = ExtResource("1_psd0u")

[node name="Background" type="TextureRect" parent="."]
z_index = -2
offset_left = 803.0
offset_top = -1.0
offset_right = 2595.0
offset_bottom = 1099.0
rotation = 1.5708
scale = Vector2(0.715363, 0.744657)
texture = ExtResource("2_5iy7j")

[node name="Invisible_walls" type="Node2D" parent="."]

[node name="Walls" type="StaticBody2D" parent="Invisible_walls"]

[node name="Upper_wall" type="CollisionShape2D" parent="Invisible_walls/Walls"]
position = Vector2(401, -73)
rotation = 1.5708
shape = SubResource("RectangleShape2D_hr6h0")

[node name="Left_wall" type="CollisionShape2D" parent="Invisible_walls/Walls"]
position = Vector2(-61, 640)
rotation = 1.5708
shape = SubResource("RectangleShape2D_gl076")

[node name="Right_wall" type="CollisionShape2D" parent="Invisible_walls/Walls"]
position = Vector2(781, 616)
rotation = 1.5708
shape = SubResource("RectangleShape2D_gl076")

[node name="Death_border" type="StaticBody2D" parent="Invisible_walls"]
position = Vector2(-5, 27)

[node name="Lower_wall" type="CollisionShape2D" parent="Invisible_walls/Death_border"]
position = Vector2(399, 1352)
rotation = 1.5708
shape = SubResource("RectangleShape2D_hr6h0")

[node name="Bouncer" type="CharacterBody2D" parent="."]
position = Vector2(369, 1137)
script = ExtResource("3_rflqc")

[node name="Bouncer_sprite_and_animations" type="AnimatedSprite2D" parent="Bouncer"]
sprite_frames = SubResource("SpriteFrames_1q3n0")
animation = &"Ball_hits_bouncer"
speed_scale = 3.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bouncer"]
visible = false
polygon = PackedVector2Array(-57, -5, -58, 15, -57, 20, 56, 20, 57, 15, 55, -5, 50, -13, 38, -20, 12, -23, -12, -23, -41, -20, -53, -13)

[node name="DottedLine" type="Sprite2D" parent="Bouncer"]
texture = ExtResource("11_546d0")
offset = Vector2(0, -50)

[node name="HeartsSystem3Lifes" type="Sprite2D" parent="."]
position = Vector2(643, 39)
scale = Vector2(0.4, 0.4)
texture = ExtResource("12_ketos")

[node name="Ball" parent="." instance=ExtResource("13_lxkvh")]
position = Vector2(367, 1133)

[node name="Game_lost_screen" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 125.0
offset_top = 400.0
offset_right = 591.09
offset_bottom = 900.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_h3jj2")

[node name="Label" type="Label" parent="Game_lost_screen"]
layout_mode = 0
offset_left = 54.0
offset_top = 23.0
offset_right = 426.0
offset_bottom = 147.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 90
text = "You lost!"

[node name="Try_again_button" type="Button" parent="Game_lost_screen"]
layout_mode = 0
offset_left = 121.0
offset_top = 233.0
offset_right = 351.0
offset_bottom = 310.0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_6k6ug")
text = "Try again"
script = ExtResource("14_3fm6v")

[node name="Level_menu_button" type="Button" parent="Game_lost_screen"]
layout_mode = 0
offset_left = 149.0
offset_top = 328.0
offset_right = 322.175
offset_bottom = 393.35
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_r1yhf")
text = "Level menu"
script = ExtResource("15_ypisd")

[node name="Game_won_screen" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 140.0
offset_top = 400.0
offset_right = 606.09
offset_bottom = 900.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_h3jj2")

[node name="Label" type="Label" parent="Game_won_screen"]
layout_mode = 0
offset_left = 54.0
offset_top = 23.0
offset_right = 426.0
offset_bottom = 147.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 90
text = "You won!"

[node name="Next_level_button" type="Button" parent="Game_won_screen"]
layout_mode = 0
offset_left = 121.0
offset_top = 233.0
offset_right = 351.0
offset_bottom = 310.0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_6k6ug")
text = "Next level"
script = ExtResource("16_fxdma")
next_level_scene = "res://Scenes/level_8_scene.tscn"

[node name="Level_menu_button" type="Button" parent="Game_won_screen"]
layout_mode = 0
offset_left = 149.0
offset_top = 328.0
offset_right = 322.175
offset_bottom = 393.35
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_r1yhf")
text = "Level menu"
script = ExtResource("15_ypisd")

[node name="Play_again_button" type="Button" parent="Game_won_screen"]
layout_mode = 0
offset_left = 150.0
offset_top = 406.0
offset_right = 323.545
offset_bottom = 473.12
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_vyjbl")
text = "Play again"
script = ExtResource("14_3fm6v")

[node name="Bricks_in_level" type="Node2D" parent="."]
script = ExtResource("17_um4ut")
current_level = "Level 6"

[node name="Brick4" type="StaticBody2D" parent="Bricks_in_level" groups=["Bricks"]]
position = Vector2(530, 270)
physics_material_override = SubResource("PhysicsMaterial_q1s4i")
script = ExtResource("18_3nv7f")
start_brick = 1
powerup_chance = 0.4
brick_4_texture = ExtResource("19_f5trq")
brick_3_texture = ExtResource("20_6xmg3")
brick_2_texture = ExtResource("21_l8imy")
brick_1_texture = ExtResource("22_yngaq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bricks_in_level/Brick4"]
position = Vector2(-0.0909424, 0.459106)
scale = Vector2(0.47, 0.49)
shape = SubResource("RectangleShape2D_8xt01")

[node name="Sprite2D" type="Sprite2D" parent="Bricks_in_level/Brick4"]
scale = Vector2(0.43, 0.457)
texture = ExtResource("22_yngaq")

[node name="Brick5" type="StaticBody2D" parent="Bricks_in_level" groups=["Bricks"]]
position = Vector2(233, 270)
physics_material_override = SubResource("PhysicsMaterial_q1s4i")
script = ExtResource("18_3nv7f")
start_brick = 1
powerup_chance = 0.4
brick_4_texture = ExtResource("19_f5trq")
brick_3_texture = ExtResource("20_6xmg3")
brick_2_texture = ExtResource("21_l8imy")
brick_1_texture = ExtResource("22_yngaq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bricks_in_level/Brick5"]
position = Vector2(-0.0909424, 0.459106)
scale = Vector2(0.47, 0.49)
shape = SubResource("RectangleShape2D_8xt01")

[node name="Sprite2D" type="Sprite2D" parent="Bricks_in_level/Brick5"]
scale = Vector2(0.43, 0.457)
texture = ExtResource("22_yngaq")

[node name="PowerupsHolder" type="Node2D" parent="."]

[node name="GlassStorage" type="Node2D" parent="."]
z_index = -1
position = Vector2(82, 59)
script = ExtResource("23_pkukq")
slot_count = 1

[node name="Sprite2D" type="Sprite2D" parent="GlassStorage"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("24_rtr3y")

[node name="Laser_holder" parent="." instance=ExtResource("25_qtbdt")]
position = Vector2(6, 149)

[node name="Laser_holder2" parent="." instance=ExtResource("25_qtbdt")]
position = Vector2(718, 151.235)

[node name="LaserBeam2D" parent="." instance=ExtResource("26_al64v")]
position = Vector2(19, 147)

[connection signal="pressed" from="Game_lost_screen/Try_again_button" to="Game_lost_screen/Try_again_button" method="_on_pressed"]
[connection signal="pressed" from="Game_lost_screen/Level_menu_button" to="Game_lost_screen/Level_menu_button" method="_on_pressed"]
[connection signal="pressed" from="Game_won_screen/Next_level_button" to="Game_won_screen/Next_level_button" method="_on_pressed"]
[connection signal="pressed" from="Game_won_screen/Level_menu_button" to="Game_won_screen/Level_menu_button" method="_on_pressed"]
[connection signal="pressed" from="Game_won_screen/Play_again_button" to="Game_won_screen/Play_again_button" method="_on_pressed"]
[connection signal="child_exiting_tree" from="Bricks_in_level" to="Bricks_in_level" method="_on_child_exiting_tree"]
